updated contact, policies

--- a/application/templates/activities.html
+++ b/application/templates/activities.html
@@ -11,7 +11,7 @@
 <p>Our instructors are highly qualified and experienced professionals ready to help you achieve your goals.</p>
 </div>
 <div>
-  <table>
+  <table class="table table-striped">
          <thead>
             <tr>
                <th>Type</th>
