--- a/application/templates/dashboard.html
+++ b/application/templates/dashboard.html
@@ -135,7 +135,7 @@
             </svg>
             <h2>Give Us Feedback</h2>
             <p>We love to hear from our members! <br>Please complete the feedback form to help improve our services!</p>
-            <a href="{{ url_for('profile') }}">
+            <a href="{{ url_for('contact') }}">
             <button class="btn" type="button">Go</button>
             </a>
 
