--- a/application/templates/login.html
+++ b/application/templates/login.html
@@ -11,32 +11,50 @@
 <div class="text-center">
 
 <main class="form-signin">
-  <form method="POST" action="{{ url_for('login') }}">
-    <img class="mb-4" src="/static/images/pf_logo.jpg" alt="GymFitnessLogo" width="100" height="100">
-    <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+  <form class="container" method="POST" action="{{ url_for('login') }}">
+      <div class="row justify-content-center">
+          <div class="col-md-8 col-12">
+                 <img class="mb-4" src="/static/images/pf_logo.jpg" alt="GymFitnessLogo" width="100" height="100">
+          </div>
+      <div class="col-md-8 col-12">
+      <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+        </div>
+      </div>
 
+   <div class="row justify-content-center">
+  <div class="col-md-8 col-12 mb-2 ">
     <div class="form-floating">
       {{ form.hidden_tag() }}
               {{ form.email.label }} {{ form.email(placeholder="example@getfit.com") }}
               <br>
     </div>
-    <div class="form-floating">
+    </div>
+      <div class="col-md-8 col-12 mb-2">
+
+       <div class="form-floating ">
       {{ form.password.label }} {{ form.password }}
               <br>
     </div>
+      </div>
 
-    <div class="checkbox mb-3">
+  </div>
+<div class="row justify-content-center">
+    <div class="col-md-8 col-12">
+          <div class="checkbox mb-3">
       <label>
         <input type="checkbox" value="remember-me"> Remember me
       </label>
     </div>
     <button class="btn btn-primary" type="submit">Login</button>
     <div class="border-top pt-3">
-        <small class="text-muted">
+        <small class="">
             Don’t have an account? <a class="ml-2" href="{{ url_for('register') }}">Register here</a>
         </small>
     </div>
-    <p class="mt-5 mb-3 text-muted">&copy; Gym Fitness 2021</p>
+    </div>
+</div>
+
+    <p class="mt-5 mb-3">&copy; Gym Fitness 2021</p>
   </form>
 </main>
 </div>
